Wrote backstory and worked on sector generator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy =  { version = "0.11.0", features = ["dynamic_linking"] }
+rand_core = "0.6.4"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
