--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,14 @@
                 }
             },
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "LD_LIBRARY_PATH": "${workspaceFolder}/target/debug/deps:$C:/Users/James/.rustup/toolchains/nightly-x86_64-pc-windows-msvc/lib"
+              }
+
+
+
+
         },
         {
             "type": "lldb",
@@ -39,7 +46,12 @@
                 }
             },
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",           
+            "env": {
+                "LD_LIBRARY_PATH": "${workspaceFolder}/target/debug/deps:$C:/Users/James/.rustup/toolchains/nightly-x86_64-pc-windows-msvc/lib"
+              }
+            
+            
         }
     ]
 }
