--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy =  { version = "0.11.0", features = ["dynamic_linking"] }
+rand = "0.8.5"
 rand_chacha = "0.3.1"
 
 # Enable a small amount of optimization in debug mode
