--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy =  { version = "0.11.0", features = ["dynamic_linking"] }
+bevy =  { version = "0.11.0"}
 bevy_embedded_assets = "0.8.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
